Add benchmark workflow and update documentation
Introduces a GitHub Actions workflow for running JMH benchmarks and reporting results. Updates README and CLAUDE.md with expanded usage, installation, and architecture details. Removes deprecated files and improves Maven dependency management. Adds new event listener and S3 file access abstraction for extensibility and performance.